# tweeta-desktop

./: .gitignore  CODE_OF_CONDUCT.md  GEMINI.md  Makefile  README.md  main.c  meson.build  test_main.c  tweeta-desktop  tweeta-desktop.1  tweeta-desktop.desktop  tweetapus-gtk-c.1  tweetapus-gtk.1
.ai/: api.json
.github/workflows/: release.yml
docs/: architecture.md  development.md  index.md  installation.md  usage.md
src/: actions.c  actions.h  challenge.c  challenge.h  constants.h  globals.c  globals.h  json_utils.c  json_utils.h  main.c  network.c  network.h  session.c  session.h  types.h  ui_components.c  ui_components.h  ui_utils.c  ui_utils.h  views.c  views.h
src/client-gtk-c/: .gitignore  README.md  main.c  tweetapus-gtk-c.desktop
